fix(buttons) hotfix undesirable background color default on mobile

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -43,6 +43,7 @@
     text-align: left;
     cursor: pointer;
     color: var(--color-delete);
+    background-color: transparent;
 }
 
 .cart__footer {
